--- a/app/views/customer_requests/index.html.erb
+++ b/app/views/customer_requests/index.html.erb
@@ -1,28 +1,23 @@
-<h1>Customer Requests:</h1>
 <table class="table table-hover">
   <thead>
     <tr>
-      <th></th>
-      <th>Distance</th>
-      <th>Address</th>
-      <th>Category</th>
-      <th>Expires</th>
+      <% @attributes.each do |attr| %>
+        <th><%= attr %></th>
+      <% end %>
     </tr>
   </thead>
   <tbody>
       <% @requests.each do |request| %>
         <tr>
-          <td>
-            <%= link_to "/customer_requests/#{request.id}" do %>
-              <span class="glyphicon glyphicon-list-alt" aria-hidden="true"></span>
-            <% end %>
-          </td>
-          <td>
-            <%= request.distance_from([@company.latitude, @company.longitude]) %>
-          </td>
-          <td><%= request.full_street_address %></td>
-          <td><%= request.service_category.name %></td>
-          <td><%= request.expires_date %></td>
+          <td><%= request.name %></td>
+          <td><%= request.email %></td>
+          <td><%= request.phone %></td>
+          <td><%= request.industry %></td>
+          <td><%= request.job_type %></td>
+          <td><%= request.project_type %></td>
+          <td><%= request.explanation %></td>
+          <td><%= request.location %></td>
+          <td><%= request.customer_availability %></td>
         </tr>
       <% end %>
   </tbody>
